[package]
name = "del-misc"
version = "0.1.3"
edition = "2021"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
license = "MIT"
repository = "https://github.com/nobuyuki83/del-misc"
description = "misc utility codes for computer graphics research"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
num-traits = "0.2.15"
array-init = "2.0.1"

#del-geo = {path="../del-geo"}
del-geo = "0.1.1"

# del-msh = {path="../del-msh"}
del-msh = "0.1.10"

# del-ls = {path="../del-ls"}
del-ls = "0.1.2"
